--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "glsl-fast-gaussian-blur": "^1.0.2",
     "glslify-loader": "^1.0.2",
     "morgan": "^1.9.0",
     "pug": "^2.0.3",
