--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Dylan Cutler",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^10.5.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "glsl-fast-gaussian-blur": "^1.0.2",
