--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^10.5.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "glsl-canny-edge-detection": "^1.0.0",
     "glsl-fast-gaussian-blur": "^1.0.2",
     "glslify-loader": "^1.0.2",
     "morgan": "^1.9.0",
