--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.0",
     "pug": "^2.0.3",
     "raw-loader": "^0.5.1",
+    "static-eval": "^2.0.0",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
     "webpack": "^4.15.1",
